# marvin-ros2-control

./: .gitmodules  CMakeLists.txt  README.md  package.xml  tj2_ros2_control.xml
.github/workflows/: release-jazzy-deb.yml
examples/: async_raw_485_test_sdk_only.cpp  marvin_gripper_init_example.cpp  marvin_hand_init_example.cpp
include/: gripper_control.h  marvin_hardware.h  tj2_hardware.h
include/marvin_ros2_control/grippers/: changingtek_gripper.h  changingtek_gripper_impl.h  dexterous_hand_gripper.h  gripper_control.h  jd_gripper.h  modbus_gripper.h
include/marvin_ros2_control/hands/: dexterous_hand.h  hand_control.h  modbus_hand.h
include/marvin_ros2_control/sensors/: kwr75_marvin485_client.h  kwr75_protocol.h
include/marvin_ros2_control/tool/: marvin_rs485_bus.h  modbus_io.h
include/marvin_ros2_control/tool/grippers/: modbus_gripper.h
include/marvin_ros2_control/tool/grippers/changingtek/: changingtek_gripper.h  changingtek_gripper_impl.h
include/marvin_ros2_control/tool/grippers/eincinx/: eincinx_gripper.h
include/marvin_ros2_control/tool/grippers/jodell/: jd_gripper.h
include/marvin_ros2_control/tool/hands/: modbus_hand.h
include/marvin_ros2_control/tool/hands/freedom/: freedom_arm_can_hand.h  freedom_arm_can_protocol.h  freedom_hand.h
include/marvin_ros2_control/tool/hands/inspire/: inspire_hand.h
include/marvin_ros2_control/tool/hands/jodell/: erg32_hand.h
include/marvin_ros2_control/tool/hands/linkerhand/: dexterous_hand.h
include/marvin_ros2_control/tool/hands/theo/: theo_hand.h
scripts/: tool_dyn_identify_wizard.py
src/: gripper_control.cpp  marvin_hardware.cpp  tj2_hardware.cpp
src/grippers/: dexterous_hand_gripper.cpp  gripper_control.cpp  jd_gripper.cpp
src/hands/: dexterous_hand.cpp
src/sensors/: kwr75_marvin485_client.cpp
src/tool/: marvin_rs485_bus.cpp  modbus_io.cpp
src/tool/grippers/eincinx/: eincinx_gripper.cpp
src/tool/grippers/jodell/: jd_gripper.cpp
src/tool/hands/jodell/: erg32_hand.cpp
src/tool/hands/theo/: theo_hand.cpp
test/: test_freedom_arm_can_protocol.cpp
